<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">MediComp</string>
	<string name="personName">Name</string>
	<string name="cancel">Cancel</string>
	<string name="save">Save</string>
	<string name="personBirthday">Day of birth</string>
	<string name="genderPrompt">Gender</string>
	<string name="personSaveFailed">Failed to save person!</string>
	<string name="personDeleteFailed">Failed to remove person!</string>
	<string name="noAvailableType">No available type!</string>
	<string name="failedToAddTemperature">Failed to add temperature!</string>
	<string name="failedToAddRecord">Failed to add record!</string>

	<string-array name="genders">
		<item>NONE</item>
		<item>Male</item>
		<item>Female</item>
		<item>Other</item>
	</string-array>

	<string name="none">none</string>
	<string name="last_measured_temperature">Temperature</string>
	<string name="temperature_graph">Chart</string>
	<string name="choosePerson">Choose Person</string>
	<string name="quit">Quit</string>
	<string name="celsius">°C</string>
	<string name="addPerson">Add person</string>
	<string name="delete">Remove</string>
	<string name="showRecords">Show person\'s records</string>
	<string name="edit">Edit</string>
	<string name="remove">Remove</string>
	<string name="move">Move</string>
	<string name="preferences">Preferences</string>
	<string name="person">Person</string>
	<string name="no_preferences">No preferences</string>
	<string name="temperature_legend">temperature</string>
	<string name="chart_widget_color_setting_summary">Setting of chart colors</string>
	<string name="chart_widget_color_settings_title">Colors</string>
	<string name="temperature_widget_color_settings_summary">Setting of temperature colors</string>
	<string name="temperature_widget_color_settings_title">Colors</string>
	<string name="chart_limits_title">Chart limits</string>
	<string name="chart_limits_summary">Set range of displayed values</string>
	<string name="temperature_limits_title">Temperature limits</string>
	<string name="temperature_limits_summary">Set upper and lower bounds for temperature</string>
	<string name="chartTemperatureColor_title">Temperature color</string>
	<string name="chartTemperatureColor_summary">Color of line in chart</string>
	<string name="chartTemperaturePeriod_title">Chart range</string>
	<string name="chartTemperaturePeriod_summary">Chart range</string>
	<string name="higherTemperatureBound_title">Heat</string>
	<string name="higherTemperatureBound_summary">When color changes to heat</string>
	<string name="upperTemperatureBound_title">Fever</string>
	<string name="upperTemperatureBound_summary">When color changes to fever</string>
	<string name="lowerTemperatureBound_title">Hypothermia</string>
	<string name="lowerTemperatureBound_summary">When color changes to hypothermia</string>
	<string name="feverColor_title">Fever color</string>
	<string name="feverColor_summary">Color to display temperature in case of fever</string>
	<string name="hypothermiaColor_title">Hypothermia color</string>
	<string name="hypothermiaColor_summary">Color to display temperature in case of hypothermia</string>
	<string name="heatColor_title">Heat color</string>
	<string name="heatColor_summary">Color to display temperature in case of heat</string>
	<string name="rightTemperatureColor_title">Healthy color</string>
	<string name="rightTemperatureColor_summary">Color to display temperature in case of right temperature</string>
	<string name="chart_widget_name">Chart widget</string>
	<string name="person_widget_name">Person widget</string>
	<string name="temperature_widget_name">Temperature widget</string>
	<string name="temperature_plugin_name">Temperature plugin</string>
	<string name="person_plugin_name">Person plugin</string>
	<string name="modules_menu">Modules</string>
	<string name="not_implemented">Not implemented</string>
	<string name="add_widget">Add widget</string>
	<string name="empty_widget">EMPTY</string>
	<string name="plugins">Plugins</string>
	<string name="move_list_item_info">Click on desired position</string>
	<string name="smart_input_hint">Enter value</string>
	<string name="chart_plugin_name">Chart plugin</string>
	<string name="chart_plugin_title">Chart plugin</string>
	<string name="chart_plugin_summary">Chart plugin</string>
	<string name="person_plugin_title">Person plugin</string>
	<string name="person_plugin_summary">Person plugin</string>
	<string name="temperature_plugin_title">Temperature plugin</string>
	<string name="temperature_plugin_summary">Temperature plugin</string>
	<string name="chart_widget_title">Chart</string>
	<string name="chart_widget_summary">Chart widget</string>
	<string name="person_widget_title">Person</string>
	<string name="person_widget_summary">Person widget</string>
	<string name="temperature_widget_title">Temperature</string>
	<string name="temperature_widget_summary">Temperature widget</string>
	<string name="person_list_plugin_activity">Person manager</string>
	<string name="person_list_plugin_activity_title">Persons</string>
	<string name="person_list_plugin_activity_summary">Management of persons</string>
	<string name="temperature_list_plugin_activity">Temperature records manager</string>
	<string name="temperature_list_plugin_activity_title">Temperature</string>
	<string name="temperature_list_plugin_activity_summary">Management of temperature records</string>
	<string name="chart_list_plugin_activity">Chart manager</string>
	<string name="chart_list_plugin_activity_title">Charts</string>
	<string name="chart_list_plugin_activity_summary">Various charts</string>
	<string name="illness_plugin_name">Illness plugin</string>
	<string name="illness_plugin_title">Illness</string>
	<string name="illness_plugin_summary">Overview of illness</string>
	<string name="illness_list_plugin_activity">Illnesses</string>
	<string name="illness_list_plugin_activity_title">Illnesses</string>
	<string name="illness_list_plugin_activity_summary">Overview of illnesses</string>
	<string name="illness_widget_name">Illness</string>
	<string name="illness_widget_title">Illness</string>
	<string name="illness_widget_summary">Summary of illnesses</string>
	<string name="all">all</string>
	<string name="temperature_preference_title">Temperature</string>
	<string name="temperature_preference_message">Choose unit for temperature</string>
	<string name="temperature_preference_summary">Unit used for temperature</string>
	<string name="units">Units</string>
	<string name="length_preference_title">Length</string>
	<string name="length_preference_message">Choose unit for length</string>
	<string name="length_preference_summary">Unit used for length</string>
	<string name="mass_preference_title">Mass</string>
	<string name="mass_preference_message">Choose unit for mass</string>
	<string name="mass_preference_summary">Unit used for mass</string>

	<!-- Color Picker -->
	<string name="dialog_color_picker">Color Picker</string>
	<string name="press_color_to_apply">Press on Color to apply</string>
	<string name="disclaimerText">Autor aplikace není zodpovědný za jakékoli škody, ať již na zdraví nebo na majetku, které uživateli nastanou v souvislosti s použitím aplikace.</string>
	<string name="disclaimerLabel">Disclaimer</string>
	<string name="usageLabel">Usage</string>
	<string name="usage">Aplikace slouží k evidenci a agregování zdravotních dat uživatele. Umožňuje více profilů, např. pro různé členy domácnosti. Zadání údajů provedete pomocí vstupního pole nahoře. Pokud program rozpozná o jaký údaj se jedná, ihned jej vloží do databáze. Pokud si není jistý, požádá uživatele o upřesnění typu zadávaného údaje.</string>
	<string name="versionLabel">Version</string>
	<string name="about">About</string>
	<string name="other">Other</string>
	<string name="imp">Import</string>
	<string name="export">Export</string>
	<string name="failedToExport">Failed to export!</string>
	<string name="failedToGetAppVersion">Failed to get application version!</string>
	<string name="failedToImortData">Failed to import data!</string>

</resources>