<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/choosePerson"
		android:icon="@drawable/ic_menu_ic_menu_patient"
		android:title="@string/choosePerson">
	</item>
	<item
		android:id="@+id/quit"
		android:icon="@drawable/ic_menu_exit"
		android:title="@string/quit">
	</item>
	<item
		android:id="@+id/addPerson"
		android:icon="@android:drawable/ic_menu_add"
		android:title="@string/addPerson">
	</item>
	<item
		android:id="@+id/showRecords"
		android:icon="@android:drawable/ic_menu_agenda"
		android:title="@string/showRecords">
	</item>
	<item
		android:id="@+id/preferences"
		android:icon="@android:drawable/ic_menu_preferences"
		android:title="@string/preferences">
	</item>
	<item
		android:id="@+id/modules"
		android:icon="@drawable/ic_menu_plugins"
		android:title="@string/modules_menu">
		<menu>
		</menu>
	</item>
	<item
		android:id="@+id/other"
		android:icon="@android:drawable/ic_menu_manage"
		android:title="@string/other">
		<menu>
			<item
				android:id="@+id/export"
				android:icon="@android:drawable/ic_popup_sync"
				android:title="@string/export"/>
			<item
				android:id="@+id/imp"
				android:icon="@android:drawable/ic_popup_sync"
				android:title="@string/imp"/>
		</menu>
	</item>
	<item
		android:id="@+id/about"
		android:icon="@android:drawable/ic_menu_help"
		android:title="@string/about">
	</item>

</menu>