<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/temperatureWidget"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" >

	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:text="@string/last_measured_temperature"
		android:textAppearance="?android:attr/textAppearanceSmall" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_toLeftOf="@+id/textView3"
		android:text="@string/none"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textSize="25pt" />

	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:text="@string/celsius"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textSize="25pt" />

</RelativeLayout>